feat: 予想所要時間
